[tool.yapf]
column_limit = 300
indent_width = 2
continuation_indent_width = 2
spaces_before_comment = 1
blank_line_before_class_docstring = false
blank_line_before_module_docstring = false
blank_line_before_nested_class_or_def = false
blank_lines_around_top_level_definition = 1
blank_lines_between_top_level_imports_and_variables = 1
allow_multiline_dictionary_keys = true
dedent_closing_brackets = true
coalesce_brackets = true

[project]
name = "invoke-node-text-util"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "build",
  "wheel",
  "setuptools",
  "pytest"
]
